--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<h1>Bonjour le monde</h1>
-<p>J'ai pas faim</p>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Mon CV</title>
+  <meta name="Zakaria Eddini">
+  <meta name="CV" content="Mon CV personnel">
+</head>
+
+<body>
+<h1>Zakaria Eddini</h1>
+<p>Etudiant à la CEJEF Divtec en INF1B</p>
+
+<main>
+<h2>Parcours scolaire</h2>
+<ul>
+  <li>Ecole obligatoire au maroc</li>
+  <li>Baccalauréat filière Science.Physique(Français)</li>
+  <li>1 Année de faculté en SV</li>
+  <li>1 Année de cours d'Allemand </li>
+</ul>
+</main>
+  
+</body>
+  
+</html>
