--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Mon CV</title>
-  <meta name="Zakaria Eddini">
-  <meta name="CV" content="Mon CV personnel">
+  <meta name="author" content="Zakaria Eddini">
+  <meta name="description" content="Mon CV personnel">
+  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
 </head>
+<header>
 
+<nav>
+  <ul>
+    <li><a href="#">Parcours scolaire</a></li>
+    <li><a href="#"></a></li>
+    <li><a href="#"></a></li>
+  </ul>
+</nav>
+  
+</header>
 <body>
 <h1>Zakaria Eddini</h1>
 <p>Etudiant à la CEJEF Divtec en INF1B</p>
@@ -19,6 +31,8 @@
   <li>1 Année de faculté en SV</li>
   <li>1 Année de cours d'Allemand </li>
 </ul>
+
+  
 </main>
   
 </body>
