--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
   <li>1 Année de faculté en SV</li>
   <li>1 Année de cours d'Allemand </li>
 </ul>
-
+<h2>Mes competences</h2>
+  <ul>
+    <li>Debutant en C++</li>
+    <li>Debutant en lua</li>
+  </ul>
   
-</main>
-  
+</main>  
 </body>
+<footer>
+  &copy;2021 Laure Dinateur
+  <a href="https://www.divtec.ch/" target=_blank>Site divtec</a>
   
+</footer>
+
 </html>
