--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Mon CV</title>
   <meta name="author" content="Zakaria Eddini">
   <meta name="description" content="Mon CV personnel">
-  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="main.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
 </head>
 <header>
