--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </main>  
 </body>
 <footer>
-  &copy;2021 Laure Dinateur
-  <a href="https://www.divtec.ch/" target=_blank>Site divtec</a>
+  &copy;2024 Zakaria Eddini
+  <br><a href="https://www.divtec.ch/" target=_blank>Site divtec</a><br>
   
 </footer>
 
