--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mon CV</title>
   <meta name="author" content="Zakaria Eddini">
   <meta name="description" content="Mon CV personnel">
-  <link rel="stylesheet" href="main.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
+  <link rel="stylesheet" href="css/main.css"/>
+ 
 </head>
 <header>
 
