--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </main>  
 </body>
 <footer>
-  &copy;2024 Zakaria Eddini
+  &copy;2024 Zakaria Eddini | <a href="mailto:zakaria.eddini@divtec.ch">mail</a>
   <br><a href="https://www.divtec.ch/" target=_blank>Site divtec</a><br>
   
 </footer>
