--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <p>Etudiant à la CEJEF Divtec en INF1B</p>
 
 <main>
-<h2>Parcours scolaire</h2>
+<h2><u>Parcours scolaire</u></h2>
 <ul>
   <li>Ecole obligatoire au maroc</li>
   <li>Baccalauréat filière Science.Physique(Français)</li>
   <li>1 Année de faculté en SV</li>
   <li>1 Année de cours d'Allemand </li>
 </ul>
-<h2>Mes competences</h2>
+<h2><u>Mes competences</u></h2>
   <ul>
     <li>Debutant en C++</li>
     <li>Debutant en lua</li>
@@ -31,7 +31,7 @@
 </main>  
 </body>
 <footer>
-  &copy;2024 Zakaria Eddini | <a href="mailto:zakaria.eddini@divtec.ch">mail</a>
+  &copy;2024 Zakaria Eddini | <a href="mailto:zakaria.eddini@divtec.ch">Mail</a>
   <br><a href="https://www.divtec.ch/" target=_blank>Site divtec</a><br>
   
 </footer>
