--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <li>Debutant en C++</li>
     <li>Debutant en lua</li>
   </ul>
+
+  <h2><u>Mes competences</u></h2>
+<p>Lors de mon stage de six mois dans une entreprise de développement logiciel, j'ai contribué à l'optimisation du backend d'une application mobile en utilisant Python et Django. 
+J'ai résolu un bug complexe lié à la synchronisation des données entre l'application et le serveur.
+Cette expérience m'a permis de perfectionner mes compétences techniques et de développer mes capacités en travail d'équipe et gestion de projet.
+<small>Merci chatgpt</small></p>
+
   
 </main>  
 </body>
