--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
  
 </head>
 <body>
+  <a href="img/drapeau_suisse.jpg" target="_blank">
+ <img src="img/drapeau_suisse.jpg" alt="Drapeau de la suisse">
+  </a>
+  
 <h1>Zakaria Eddini</h1>
 <p>Etudiant à la CEJEF Divtec en INF1B</p>
 
@@ -29,10 +33,11 @@
   </ul>
 
   <h2><u>Mes competences</u></h2>
-<p>Lors de mon stage de six mois dans une entreprise de développement logiciel, j'ai contribué à l'optimisation du backend d'une application mobile en utilisant Python et Django. 
-J'ai résolu un bug complexe lié à la synchronisation des données entre l'application et le serveur.
-Cette expérience m'a permis de perfectionner mes compétences techniques et de développer mes capacités en travail d'équipe et gestion de projet.
-<small>Merci chatgpt</small></p>
+    <p>  Lors de mon stage de six mois dans une entreprise de développement logiciel, j'ai contribué à l'optimisation du backend d'une application mobile en utilisant Python et Django. 
+      J'ai résolu un bug complexe lié à la synchronisation des données entre l'application et le serveur.
+      Cette expérience m'a permis de perfectionner mes compétences techniques et de développer mes capacités en travail d'équipe et gestion de projet.
+      <small>(Text inventé)</small>
+    
 
   
 </main>  
