--- a/index.html
+++ b/index.html
@@ -10,29 +10,45 @@
   <link rel="stylesheet" href="css/main.css"/>
  
 </head>
-<body>
-  <a href="img/drapeau_suisse.jpg" target="_blank">
- <img src="img/drapeau_suisse.jpg" alt="Drapeau de la suisse">
+  <header>
+     <a href="img/drapeau_suisse.jpg" target="_blank">
+     <img src="img/drapeau_suisse.jpg" alt="Drapeau de la suisse" width="300" height="200">
   </a>
+    <nav>
+        <ul>
+            <li>
+                <a href="#parcours">Mon parcours</a>
+            </li>
+             <li>
+                <a href="#competnece">Mes competences</a>
+            </li>
+             <li>
+                <a href="#experience">Mon experience</a>
+            </li>
+        </ul>
+    </nav>
+  </header>
+<body>
+ 
   
 <h1>Zakaria Eddini</h1>
 <p>Etudiant à la CEJEF Divtec en INF1B</p>
 
 <main>
-<h2><u>Parcours scolaire</u></h2>
+<h2 id="parcours"<u>Parcours scolaire</u></h2>
 <ul>
   <li>Ecole obligatoire au maroc</li>
   <li>Baccalauréat filière Science.Physique(Français)</li>
   <li>1 Année de faculté en SV</li>
   <li>1 Année de cours d'Allemand </li>
 </ul>
-<h2><u>Mes competences</u></h2>
+<h2 id="competence"<u>Mes competences</u></h2>
   <ul>
     <li>Debutant en C++</li>
     <li>Debutant en lua</li>
   </ul>
 
-  <h2><u>Mes competences</u></h2>
+  <h2 id="Mon experience"<u>Experience</u></h2>
     <p>  Lors de mon stage de six mois dans une entreprise de développement logiciel, j'ai contribué à l'optimisation du backend d'une application mobile en utilisant Python et Django. 
       J'ai résolu un bug complexe lié à la synchronisation des données entre l'application et le serveur.
       Cette expérience m'a permis de perfectionner mes compétences techniques et de développer mes capacités en travail d'équipe et gestion de projet.
