--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
   <header>
      <a href="img/drapeau_suisse.jpg" target="_blank">
-     <img src="img/drapeau_suisse.jpg" alt="Drapeau de la suisse" width="300" height="200">
-  </a>
+    <img src="img/drapeau_suisse.jpg" alt="Drapeau de la Suisse" width="200" height="200">
+</a>
+
     <nav>
         <ul>
             <li>
