--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
 </head>
   <header>
-     <a href="img/drapeau_suisse.jpg" target="_blank">
+     <a href="img/drapeau_suisse.jpg" class="logo" target="_blank">
     <img src="img/drapeau_suisse.jpg" alt="Drapeau de la Suisse" width="200" height="200">
 </a>
 
