--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
   <header>
      <a href="img/drapeau_suisse.jpg" class="logo" target="_blank">
-    <img src="img/drapeau_suisse.jpg" alt="Drapeau de la Suisse" width="200" height="200">
+    <img src="img/drapeau_suisse.jpg" alt="Drapeau de la Suisse">
 </a>
 
     <nav>
