Mise a jour css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>  
 
   <footer>
-    &copy;2024 Zakaria Eddini | <a href="mailto:zakaria.eddini@divtec.ch">Mail</a>
+    &copy;2024 Zakariia Eddini | <a href="mailto:zakaria.eddini@divtec.ch">Mail</a>
     <br><a href="https://www.divtec.ch/" target="_blank">Site divtec</a><br>
   </footer>
 </body>
